deployment/envoy-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relay-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/part-of: relay
